# nosleep

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  example.cpp
include/nosleep/: nosleep.hpp
include/woke/: woke.hpp
src/: backend.hpp  backend_linux.cpp  backend_macos.cpp  backend_nap_linux.cpp  backend_nap_macos.mm  backend_nap_windows.cpp  backend_sleep_linux.cpp  backend_sleep_macos.cpp  backend_sleep_windows.cpp  backend_windows.cpp  dbus_message.cpp  dbus_message.hpp  nosleep.cpp  woke.cpp
tests/: CMakeLists.txt  test_dbus_message.cpp  test_nosleep.cpp  test_util.hpp  test_woke.cpp
